--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'com.google.firebase:firebase-functions:16.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-rc1'
+
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
