Pdf Reader portion added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation 'com.github.skydoves:androidveil:1.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
